2009-09-04  Nicola  <nicola.pero@meta-innovation.com>

	* Images/GNUmakefile: Rewritten using the standard
	resource-set.make instead of duplicating resource installation
	code in every makefile.  resource-set.make also has a lots of
	additional features and provides robust, portable code.
	* Sounds/GNUmakefile: Same change.
	* Themes/GNUmakefile: Same change (this should also fix installing
	gnustep-gui on Sun Solaris 7).
	* Images/GNUmakefile.postamble: Removed.
	* Sounds/GNUmakefile.postamble: Removed.
	* Themes/GNUmakefile.postamble: Removed.
	
2009-09-01 19:45-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Images/common_ToolbarCustomizeToolbarItem.tiff: Minor cleanup

2009-09-01 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSToolTips.m: fix bug #25907 by ensuring windows is fully
	displayed before we draw to it, and we then flush our drawing.
	* Source/NSMenu.m: fix bug #27344 by telling the menu view that it
	needs resizing every time we change menu title (or items).

2009-08-31  Quentin Mathe <quentin.mathe@gmail.com>

	* Images/nsmapping.strings: Added NSApplicationIcon to ensure
	-imageNamed: returns a non-nil image even when
	-[NSApplication finishLaunching] hasn't been called.
	The behavior is now the same than Cocoa.

2009-08-28 17:32-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Images/common_DimpleHoriz.tiff: Add
	* Images/common_DimpleH.tiff: Remove
	* Images/GNUmakefile: Copy new image.
	* Source/GSThemeDrawing.m: Correct image name.

2009-08-28 17:19-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Images/common_DimpleH.tiff: Horizontal image for dimple.  This
	image is not different from the vertical dimple for the default
	theme.  It's here so that it can be overriden by a theme, if
	needed.
	* Images/GNUmakefile: Add new image.
	* Source/GSThemeDrawing.m: Modify code in cellForScrollerKnob
	to use common_Dimple.tiff or common_DimpleH.tiff depending
	on the orientation of the scroller.
